# media-converter

./: CLAUDE.md  CONVENTION.md  PLAN.xml  biome.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.serena/: project.yml
public/: exif.avif
src/: app.tsx  index.css  main.tsx  scrollbar.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  exif.rs  lib.rs  main.rs  models.rs  state.rs
src-tauri/src/converters/: avif.rs  jpeg.rs  mod.rs  png.rs  webp.rs
src/components/: add-button.tsx  clear-button.tsx  file-list-item.tsx  history-button.tsx  info-button.tsx  remove-all-button.tsx  theme-toggle-button.tsx  toolbar.tsx
src/components/footer/: footer.tsx
src/components/header/: toolbar-add-button-modal.tsx  toolbar-add-button.tsx  toolbar-add-url-button.tsx  toolbar-clear-button.tsx  toolbar-history-button.tsx  toolbar-info-button.tsx  toolbar-remove-all-button.tsx  toolbar-settings-button.tsx  toolbar-theme-toggle-button.tsx  toolbar.tsx
src/components/layout/: footer.tsx  main.tsx
src/components/main/: file-list-item.tsx  main.tsx
src/components/settings/: settings-modal.tsx
src/components/ui/: button-group.tsx  button.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  select.tsx  separator.tsx  slider.tsx  sonner.tsx  tooltip.tsx
src/hooks/: use-file-list.tsx
src/lib/: file-utils.ts  url-utils.ts
src/stores/: conversion-settings-store.ts  file-store.ts
