[package]
name = "anyimage-converter"
version = "0.1.0"
description = "AnyImage Converter - Convert any image format to any format"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "anyimage_converter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image conversion - comprehensive format support with quality control
# Supports: jpg, png, webp (lossless/lossy), avif, gif, bmp, tiff, tga, etc.
# Quality settings available for jpeg, webp, png compression
image = { version = "0.25", features = ["webp", "avif", "jpeg", "png", "gif", "bmp", "tiff"] }

# SVG rendering and conversion
resvg = "0.44"
usvg = "0.44"

# HEIC/HEIF support
libheif-rs = "1.0"

# HTTP client for fetching images from URLs (async with tokio)
reqwest = { version = "0.12" }

# EXIF metadata extraction
kamadak-exif = "0.5"

# UUID generation for file IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# WebP encoding with libwebp (better compression than image crate)
webp = "0.3"

# File timestamp preservation
filetime = "0.2"
tokio = { version = "1.47.1", features = ["rt"] }

